<?xml version="1.0" encoding="utf-8"?>

<!-- The fragment in the demo app containing all demo bars. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:barwidget="http://schemas.android.com/apk/res/edu.brown.ebirenbaum.barwidget"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="edu.brown.ebirenbaum.barwidget.BarViewFragment" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_bars_label"
                android:textSize="@dimen/label_font_size" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:layout_width="match_parent"
                android:layout_height="@dimen/demo_bar_view_basic_height"
                android:paddingBottom="@dimen/demo_bar_view_padding"
                barwidget:fillPercentage=".8"
                barwidget:primaryColor="@android:color/holo_blue_light" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:layout_width="match_parent"
                android:layout_height="@dimen/demo_bar_view_basic_height"
                barwidget:fillPercentage=".6"
                barwidget:primaryColor="@android:color/holo_red_light"
                barwidget:secondaryColor="@android:color/holo_orange_light"
                barwidget:showDivider="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_bars_description" />
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="8dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertical_bars_label"
            android:textSize="@dimen/label_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <edu.brown.ebirenbaum.barwidget.BarView
                android:layout_width="@dimen/demo_bar_view_basic_height"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/demo_bar_view_padding"
                barwidget:fillPercentage=".8"
                barwidget:primaryColor="@android:color/holo_blue_light"
                barwidget:vertical="true" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:layout_width="@dimen/demo_bar_view_basic_height"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/demo_bar_view_padding"
                barwidget:fillPercentage=".8"
                barwidget:primaryColor="@android:color/holo_blue_light"
                barwidget:reversed="true"
                barwidget:vertical="true" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:layout_width="@dimen/demo_bar_view_basic_height"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/demo_bar_view_padding"
                barwidget:fillPercentage=".6"
                barwidget:primaryColor="@android:color/holo_red_light"
                barwidget:secondaryColor="@android:color/holo_orange_light"
                barwidget:showDivider="true"
                barwidget:vertical="true" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:layout_width="@dimen/demo_bar_view_basic_height"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/demo_bar_view_padding"
                barwidget:fillPercentage=".6"
                barwidget:primaryColor="@android:color/holo_red_light"
                barwidget:reversed="true"
                barwidget:secondaryColor="@android:color/holo_orange_light"
                barwidget:showDivider="true"
                barwidget:vertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertical_bars_description" />
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="8dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animated_bars_label"
                android:textSize="@dimen/label_font_size" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:id="@+id/demo_bar_view_standard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/demo_bar_view_basic_height"
                android:paddingBottom="@dimen/demo_bar_view_padding"
                barwidget:fillPercentage=".8"
                barwidget:primaryColor="@android:color/holo_blue_light" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:id="@+id/demo_bar_view_standard_reversed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/demo_bar_view_basic_height"
                android:paddingBottom="@dimen/demo_bar_view_padding"
                barwidget:animationDuration="1000"
                barwidget:fillPercentage=".8"
                barwidget:primaryColor="@android:color/holo_blue_light"
                barwidget:reversed="true" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:id="@+id/demo_bar_view_divided"
                android:layout_width="match_parent"
                android:layout_height="@dimen/demo_bar_view_basic_height"
                android:paddingBottom="@dimen/demo_bar_view_padding"
                barwidget:animationDuration="1500"
                barwidget:fillPercentage=".6"
                barwidget:primaryColor="@android:color/holo_red_light"
                barwidget:secondaryColor="@android:color/holo_orange_light"
                barwidget:showDivider="true" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:id="@+id/demo_bar_view_divided_reversed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/demo_bar_view_basic_height"
                barwidget:animationDuration="2000"
                barwidget:fillPercentage=".6"
                barwidget:primaryColor="@android:color/holo_red_light"
                barwidget:reversed="true"
                barwidget:secondaryColor="@android:color/holo_orange_light"
                barwidget:showDivider="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animated_bars_description" />

            <Button
                android:id="@+id/demo_bar_view_animate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/animate_button"
                android:textSize="@dimen/button_font_size" />
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_margin="8dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_bar_label"
                android:textSize="@dimen/label_font_size"
                android:paddingBottom="@dimen/demo_bar_view_padding" />

            <edu.brown.ebirenbaum.barwidget.BarView
                android:id="@+id/demo_bar_customizable"
                android:layout_width="match_parent"
                android:layout_height="@dimen/demo_bar_view_vertical_height"
                android:paddingBottom="@dimen/demo_bar_view_padding"
                barwidget:fillPercentage=".5"
                barwidget:primaryColor="@android:color/holo_green_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".333"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_bar_option_fill_text" />

                    <NumberPicker
                        android:id="@+id/demo_bar_option_fill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".333"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_bar_option_primary_color_text" />

                    <NumberPicker
                        android:id="@+id/demo_bar_option_primary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".333"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_bar_option_secondary_color_text" />

                    <NumberPicker
                        android:id="@+id/demo_bar_option_secondary_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    
                </LinearLayout>
                
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                
                <LinearLayout
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight=".5"
	                android:orientation="vertical" >
                    
	                <CheckBox
		                android:id="@+id/demo_bar_option_divider"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/demo_bar_option_divider_text" />
		            
		            <CheckBox
		                android:id="@+id/demo_bar_option_vertical"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/demo_bar_option_vertical_text" />
		            
	            </LinearLayout>
            
                <LinearLayout
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight=".5"
	                android:orientation="vertical" >
		            
		            <CheckBox
		                android:id="@+id/demo_bar_option_reversed"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/demo_bar_option_reversed_text" />
		            
		            <CheckBox
		                android:id="@+id/demo_bar_option_animate"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/demo_bar_option_animate_text" />
		            
	            </LinearLayout>
                
            </LinearLayout>

            <Button
                android:id="@+id/demo_bar_view_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset_button"
                android:textSize="@dimen/button_font_size" />
            
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>